@@ -212,6 +212,8 @@ public class DatasetVersionTranslator extends EBRAINSTranslator<DatasetVersionV3
         String containerUrl = datasetVersion.getFileRepository() != null ? datasetVersion.getFileRepository().getIri() : null;
         if (accessibility != null) {
             switch (accessibility) {
+                case RETRACTED:
+                    d.setWatermark(value("Retracted"));
                 case CONTROLLED_ACCESS:
                     d.setEmbargo(value(DatasetVersion.createHDGMessage(uuid, containerUrl)));
                     break;
@@ -241,7 +243,10 @@ public class DatasetVersionTranslator extends EBRAINSTranslator<DatasetVersionV3
                         }
                     }
             }
-            d.setDataAccessibility(value(datasetVersion.getAccessibility().getName()));
+            if(accessibility!=Accessibility.RETRACTED) {
+                //We don't want the accessibility to be available in the faceted filter.
+                d.setDataAccessibility(value(datasetVersion.getAccessibility().getName()));
+            }
         }
 
         d.setExperimentalApproach(ref(datasetVersion.getExperimentalApproach()));
@@ -317,17 +322,6 @@ public class DatasetVersionTranslator extends EBRAINSTranslator<DatasetVersionV3
             Collections.sort(datasetVersion.getKeyword());
             d.setKeywords(value(datasetVersion.getKeyword()));
         }
-
-        if (datasetVersion.getEthicsAssessment() != null) {
-            String ethicsAssessment = null;
-            if (datasetVersion.getEthicsAssessment().contains(Constants.OPENMINDS_INSTANCES + "/ethicsAssessment/notRequired")) {
-                ethicsAssessment = "not-required";
-            } else if (datasetVersion.getEthicsAssessment().contains(Constants.OPENMINDS_INSTANCES + "/ethicsAssessment/EUCompliant") || datasetVersion.getEthicsAssessment().contains(Constants.OPENMINDS_INSTANCES + "/ethicsAssessment/EUCompliant+")) {
-                ethicsAssessment = "EU-compliant";
-            }
-            d.setEthicsAssessment(value(ethicsAssessment));
-        }
-
 
         final List<File> specialFiles = datasetVersion.getSpecialFiles();
 
@@ -473,10 +467,11 @@ public class DatasetVersionTranslator extends EBRAINSTranslator<DatasetVersionV3
             }).filter(Objects::nonNull).collect(Collectors.toList()));
         }
         final BasicHierarchyElement<DatasetVersion.DSVSpecimenOverview> specimenBySubject = new SpecimenTranslator(datasetVersion.getId(), translatorUtils.getErrors(), getSpecimenLookupMapFromContext(translatorUtils)).translateToHierarchy(datasetVersion.getStudiedSpecimen());
+        List<Value<String>> speciesFilter = new ArrayList<>();
         if (specimenBySubject != null) {
             d.setSpecimenIds(specimenBySubject.getData().getAllSpecimenIds());
             if (specimenBySubject.getData().getSpecies() != null) {
-                d.setSpeciesFilter(specimenBySubject.getData().getSpecies().stream().map(TargetInternalReference::getValue).filter(Objects::nonNull).distinct().map(Value::new).collect(Collectors.toList()));
+                speciesFilter.addAll(specimenBySubject.getData().getSpecies().stream().map(TargetInternalReference::getValue).filter(Objects::nonNull).distinct().map(Value::new).toList());
             }
             final Set<TargetInternalReference> anatomicalLocationsOfTissueSamples = specimenBySubject.getData().getAnatomicalLocationsOfTissueSamples();
             if (!CollectionUtils.isEmpty(anatomicalLocationsOfTissueSamples)) {
@@ -484,7 +479,12 @@ public class DatasetVersionTranslator extends EBRAINSTranslator<DatasetVersionV3
             }
             d.setSpecimenBySubject(specimenBySubject);
         }
-
+        if(datasetVersion.getStudyTarget()!=null) {
+            speciesFilter.addAll(datasetVersion.getStudyTarget().stream().filter(s -> s.getStudyTargetType().contains(Constants.OPENMINDS_ROOT + "types/Species")).map(s -> value(s.getFullName())).toList());
+        }
+        if(!speciesFilter.isEmpty()){
+            d.setSpeciesFilter(speciesFilter);
+        }
         Map<String, FullNameRefForResearchProduct> inputResearchProducts = new HashMap<>();
         EBRAINSTranslatorUtils.addResearchProductsFromDOIs(inputResearchProducts, datasetVersion.getInputDOIs());
         EBRAINSTranslatorUtils.addResearchProducts(inputResearchProducts, datasetVersion.getInputResearchProductsFromInputFiles());
